--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
   "devDependencies": {
     "@types/vscode": "^1.48.0",
     "ts-loader": "^4.4.2",
-    "typescript": "^3.9.7",
+    "typescript": "^4.1.0-dev.20200924",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
